@startuml

package Presentation {
    class BlockUpdatePresenter {

    }
}

package ChunkRendering {
    class BlockUpdateReceptor {
        UpdateBlock(BlockGridCoordinate)
    }

    class BlockUpdateApplyer {
        Apply(BlockGridCoordinate)
    }

    class UpdatedChunkRenderingSurfaceCalculator {
        Calculate(BlockGridCoordinate) : IEnumeable<ChunkRenderingSurface>
    }

    class ChunkRendererUpdater {
        Update(ChunkGridCoordinate, ChunkMesh)
    }

    class CreatedChunkRenderers {
        TryGetValue(ChunkGridCoordinate)
    }

    class ChunkRenderer {
        SetMesh(ChunkMesh)
    }
}

BlockUpdatePresenter --> BlockUpdateReceptor : "更新するブロックの座標を通知"

BlockUpdateReceptor --> BlockUpdateApplyer : "ブロックの更新をチャンク描画面に反映する処理を委譲"
BlockUpdateApplyer --> UpdatedChunkRenderingSurfaceCalculator : "チャンク描画面の計算を委譲"

BlockUpdateApplyer --> ChunkRendererUpdater : "Calculatorの戻り値をChunkRendererに反映"
ChunkRendererUpdater --> CreatedChunkRenderers : "インスタンスが\n作成されていれば\nメッシュを更新"
CreatedChunkRenderers *-- ChunkRenderer

@enduml